# book_management

./: __init__.py  pyproject.toml  run_test.py
config/: __init__.py  config_database.py  config_redis.py
server/: __init__.py  app.py
server/models/: __init__.py  author.py  book.py
server/redis/: demo.py
server/routes/: author.py  book.py
server/schemas/: __init__.py  author.py  book.py
