[tool.poetry]
name = "book-management"
version = "0.1.0"
description = ""
authors = ["trongnd <nguyendotrong.58@gmail.com>"]
readme = "README.md"
packages = [{include = "book_management"}]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
agrspy = "9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
